# vigilant-eureka

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260416_01_initial_stage1.py  20260416_02_stage3_code_reservation_link.py
apps/api/app/: main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  auth.py  dashboard.py  inventory.py  orders.py  pricing.py  rates.py  reports.py  settings.py
apps/api/app/core/: config.py  encryption.py  locks.py  security.py
apps/api/app/jobs/: __init__.py  scheduler.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: auth.py  inventory.py  orders.py  pricing.py  rates.py  settings.py
apps/api/app/services/: audit_service.py  auth_service.py  inventory_service.py  orders_service.py  pricing_service.py  rates_service.py  reports_service.py  reservation_service.py  settings_service.py
apps/api/tests/: test_auth_service.py  test_locks.py  test_pricing_service.py  test_reports_service.py  test_reservation_service.py  test_stage3_flow.py  test_status_transitions.py
apps/web/: README.md  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: nav.tsx  query-provider.tsx  status-badge.tsx
apps/web/lib/: api.ts  mock.ts  store.ts
docs/: stage1.md  stage2.md  stage3.md  stage5-reports.md  stage5-seed.md
infra/: nginx.conf
scripts/: check-in-docker.sh
(+5 files in other folders)
